# gdi-rs

./: .editorconfig  Cargo.toml  README.md  appveyor.yml
examples/: simple.rs
src/: batch.rs  brush.rs  color.rs  device_context.rs  lib.rs  macros.rs  object.rs  rectangle.rs  region.rs
src/text/: font.rs  mod.rs
